# 110-cinemas

./: .gitignore  .pylintrc  AGENTS.md  README.md  build.sh  main.py  pyproject.toml  pytest.ini  render.yaml
.claude/: launch.json
.claude/commands/: opsx-apply.md  opsx-archive.md  opsx-explore.md  opsx-propose.md  opsx-sync.md
.claude/skills/code-review-expert/: SKILL.md
.claude/skills/django-expert/: SKILL.md
.claude/skills/django-patterns/: SKILL.md
.opencode/skills/receiving-code-review/: SKILL.md
.opencode/skills/refactor/: SKILL.md
cinema/: admin.py  apps.py  asgi.py  conftest.py  forms.py  models.py  services.py  settings.py  signals.py  test_commands.py  test_forms.py  test_models.py  test_views.py  urls.py  views.py  wsgi.py
cinema/management/commands/: seed_demo_data.py
cinema/migrations/: 0001_initial.py  0002_reservation_customer_email_reservation_customer_name.py
cinema/static/cinema/css/: styles.css
cinema/templates/cinema/: _movie_card.html  _reservation_area.html  _seat.html  _seat_reserve_form.html  base.html  movie_list.html  my_bookings.html  reservation_confirmation.html  reservation_form.html  seat_selection.html
openspec/changes/archive/2026-07-04-design-database-schema/: proposal.md  tasks.md
openspec/changes/archive/2026-07-04-write-view-functions/: design.md  proposal.md  tasks.md
openspec/changes/design-database-schema/: design.md
openspec/specs/movies-catalog/: spec.md
openspec/specs/screenings/: spec.md
openspec/specs/seat-reservations/: spec.md
openspec/specs/web-views/: spec.md
(+18 files in other folders)
